--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NSRSDKJavaExample">
+        android:theme="@style/Theme.NSRSDKJavaExample"
+        >
 
         <!-- Deprecated in android 8+ -->
         <!--service
