--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    buildToolsVersion "28.0.3" //"30.0.2"
 
     defaultConfig {
         applicationId "eu.nsrsdk.javaexample"
